<resources>
    <string name="app_name">Mortgage</string>
    <string name="label_amount">Label amount</string>
    <string name="amount">$100000.00</string>
    <string name="label_years">Years</string>
    <string name="years">30</string>
    <string name="label_rate">Interest Rate</string>
    <string name="rate">3.5%</string>
    <string name="label_monthly_payment">Monthly payment</string>
    <string name="monthly_payment">$449.04</string>
    <string name="label_total_payment">Total payment</string>
    <string name="total_payment">$161654.66</string>
    <string name="modify_data">Modify Data</string>

    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="thirty">30</string>
    <string name="amountDecimal">100000.00</string>
    <string name="rateDecimal">.035</string>
    <string name="done">Done</string>


</resources>
