<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context="edu.orangecoastcollege.cs273.ttran1272.mortgage.MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dip"
            android:text="@string/label_amount"/>

        <TextView
            android:id="@+id/amount"
            android:text="@string/amount"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dip"
            android:text="@string/label_years"/>

        <TextView
            android:id="@+id/years"
            android:text="@string/years"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dip"
            android:text="@string/label_rate"/>

        <TextView
            android:id="@+id/textView6"
            android:text="@string/rate"/>
    </TableRow>

    <!-- red line -->

    <View
        android:layout_height="5dip"
        android:background="#FF0000"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dip"
            android:text="@string/label_monthly_payment"/>

        <TextView
            android:id="@+id/monthly_payment"
            android:text="@string/monthly_payment"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:padding="10dip"
            android:text="@string/label_total_payment"/>

        <TextView
            android:id="@+id/totalPayment"
            android:text="@string/total_payment"/>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:paddingTop="51dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/modify_data"
            android:onClick="modifyData"/>
    </TableRow>


</TableLayout>



