<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin"
    tools:context="edu.orangecoastcollege.cs273.ttran1272.mortgage.DataActivity">

    <TextView
        android:id="@+id/label_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_years" />

    <RadioGroup
        android:layout_toRightOf="@id/label_years"
        android:layout_alignLeft="@+id/data_rate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ten" />

        <RadioButton
            android:id="@+id/fifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fifteen" />

        <RadioButton
            android:id="@+id/thirty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/thirty" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_years"
        android:layout_marginTop="50dp"
        android:text="@string/label_amount" />

    <EditText
        android:id="@+id/data_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/label_amount"
        android:layout_alignLeft="@id/data_rate"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/label_amount"
        android:text="@string/amountDecimal"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/label_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/label_amount"
        android:text="@string/label_rate" />

    <EditText
        android:id="@+id/data_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/label_rate"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/label_rate"
        android:layout_marginLeft="10dp"
        android:text="@string/rateDecimal"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/data_rate"
        android:layout_marginTop="50dp"
        android:onClick="goBack"
        android:text="@string/done" />

</RelativeLayout>
